# rotaplanner

./: .eslintrc.js  .gitignore  .pnp.cjs  Pipfile  abstracttypes.py  app.py  cli.py  config.py  constants.py  constraintlist.txt  constraintlist.txt.bak  constraintmanager.py  constraints.json  constraints.py  constraintslist.py  context.py  convert_datafile.py  convertdb.py  database.py  database.sqlite  database0.py  datafile  datafile.bak  datafile.db  datafile.db.bak  datafile.dir  datafile.json.bak  datafile2.db  datastore.py  datatypes.py  datetests.py  dependency_injection.py  esbuild.py  fastapi_version.py  flask_unpoly.py  index.htm  index.html  jsfile.js  logfile.txt  main.py  (+35 more)
.devcontainer/: devcontainer.json
backend/: Pipfile  aio.py  constants.py  constraint_ctx.py  datastore.py  datatypes.py  expand.py  logger.py  profile.bak  qtversion.py  signals.py  solver.py  storage.py  templating.py
codegen_test/: testquery.py  testquery.ts
config/: jobplans.py
constraints/: __init__.py  __xinit__.py  apply_jobplan.py  apply_leavebook.py  balance_tallies.py  base.py  common_config.py  cons_of_the_week.py  cons_of_the_weekend.py  cons_of_the_weekend_nights.py  constraint_store.py  constraintmanager.py  consultant_of_the_week.py  core_duties.py  cotw_base.py  ctx.py  enforce_acceptable_deviation.py  enforce_max_oncalls_per_period.py  enforce_max_weekends_per_period.py  enforce_max_weeks_per_period.py  enforce_max_x_in_y_base.py  enforce_no_monday_after_weekend.py  enforce_no_multiple_weekday_calls.py  enforce_no_night_before_dcc.py  enforce_rules.py  enforce_weekend_not_following_week.py  jobplan_expectations.py  limit_locum_shifts.py  no_multitasking.py  some_shifts_are_locum.py  test.py  timetabled_dcc.py  utils.py
dialogs/: date_rules.py  demand_activities.py  edit_activity.py  forms.py
frontend/: .eslintrc.js  .pnp.cjs  app.jsx  bun.lockb  component.css  component.jsx  constraintUi.js  entrypoint.js  esb.mjs  jsfile.js  localconfig.js  (+5 more)
(+492 files in other folders)
