[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rotaplanner"
dynamic = ["version"]
description = 'Rota allocation manager'

requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Daniel Silcock", email = "dannysilcock@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
"javascript",
"ortools",
"pytest",
"pytest-asyncio",
"pyhumps",
"sqlalchemy",
"flask",
"flask_cors",
"sqlmodel",
"pydantic",
"python-dateutil",
"flask-pydantic",
"flask-sqlalchemy",
"unpoly",
"flask-wtf",
"WTForms-SQLAlchemy"]

[project.urls]
Documentation = "https://github.com/Daniel Silcock/rotaplanner#readme"
Issues = "https://github.com/Daniel Silcock/rotaplanner/issues"
Source = "https://github.com/Daniel Silcock/rotaplanner"

[tool.hatch.build.targets.wheel]
packages = ["rotaplanner"]

[tool.hatch.version]
path = "rotaplanner/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/rotaplanner tests}"

[tool.coverage.run]
source_pkgs = ["rotaplanner", "tests"]
branch = true
parallel = true
omit = [
  "src/rotaplanner/__about__.py",
]

[tool.coverage.paths]
rotaplanner = ["src/rotaplanner", "*/rotaplanner/src/rotaplanner"]
tests = ["tests", "*/rotaplanner/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
